[gd_scene load_steps=35 format=3 uid="uid://buboor53vajwt"]

[ext_resource type="Script" path="res://Scripts/Enemies/AI Boss/Boss.gd" id="1_5ltt4"]
[ext_resource type="Script" path="res://Scripts/Enemies/AI Tank/StateMachineAlt.gd" id="2_wme0s"]
[ext_resource type="Texture2D" uid="uid://cnkfm0pu6wqx6" path="res://Assets/SGQ_Enemies/bosses/slime_king.png" id="3_7h0ho"]

[sub_resource type="Animation" id="Animation_qg7p2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ae0hs"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_340oo"]
resource_name = "hit_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 25]
}

[sub_resource type="Animation" id="Animation_qnp7h"]
resource_name = "hit_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 20]
}

[sub_resource type="Animation" id="Animation_dsp0j"]
resource_name = "idle_left"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_8eh7t"]
resource_name = "idle_right"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_52xnq"]
resource_name = "walk_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_n6nif"]
resource_name = "walk_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nmk2x"]
_data = {
"RESET": SubResource("Animation_qg7p2"),
"death": SubResource("Animation_ae0hs"),
"hit_left": SubResource("Animation_340oo"),
"hit_right": SubResource("Animation_qnp7h"),
"idle_left": SubResource("Animation_dsp0j"),
"idle_right": SubResource("Animation_8eh7t"),
"walk_left": SubResource("Animation_52xnq"),
"walk_right": SubResource("Animation_n6nif")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5o4b"]
size = Vector2(22, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_eelx2"]
radius = 45.6667

[sub_resource type="CircleShape2D" id="CircleShape2D_vg3ti"]
radius = 23.6667

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w51as"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ijww0"]
animation = &"hit_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ar6wi"]
animation = &"hit_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_l84pp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ijww0")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ar6wi")
blend_point_1/pos = 1.1
max_space = 1.1
blend_mode = 2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_guysq"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tf1ba"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_k00b6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_guysq")
blend_point_0/pos = 1.1
blend_point_1/node = SubResource("AnimationNodeAnimation_tf1ba")
blend_point_1/pos = -1.0
max_space = 1.1
blend_mode = 2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kfeov"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4sqgx"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_xwc0h"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kfeov")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_4sqgx")
blend_point_1/pos = 1.1
max_space = 1.1
blend_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2yaaa"]
advance_mode = 2
advance_condition = &"IsMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0532g"]
advance_mode = 2
advance_condition = &"IsNotMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_02l38"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2adv5"]
advance_mode = 2
advance_condition = &"JustHit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w061b"]
switch_mode = 2
advance_mode = 2
advance_condition = &"IsNotMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8grgk"]
switch_mode = 2
advance_mode = 2
advance_condition = &"IsMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_61f3n"]
advance_mode = 2
advance_condition = &"JustHit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xclgo"]
advance_mode = 2
advance_condition = &"IsDying"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6xlp7"]
states/Death/node = SubResource("AnimationNodeAnimation_w51as")
states/Death/position = Vector2(706, 268)
states/End/position = Vector2(872, 268)
states/Hit/node = SubResource("AnimationNodeBlendSpace1D_l84pp")
states/Hit/position = Vector2(487, 268)
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_k00b6")
states/Idle/position = Vector2(372, 100)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_xwc0h")
states/Move/position = Vector2(599, 100)
transitions = ["Idle", "Move", SubResource("AnimationNodeStateMachineTransition_2yaaa"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_0532g"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_02l38"), "Idle", "Hit", SubResource("AnimationNodeStateMachineTransition_2adv5"), "Hit", "Idle", SubResource("AnimationNodeStateMachineTransition_w061b"), "Hit", "Move", SubResource("AnimationNodeStateMachineTransition_8grgk"), "Move", "Hit", SubResource("AnimationNodeStateMachineTransition_61f3n"), "Hit", "Death", SubResource("AnimationNodeStateMachineTransition_xclgo")]
graph_offset = Vector2(4, 39.6147)

[node name="Enemy1" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(0, -5)
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 3
motion_mode = 1
script = ExtResource("1_5ltt4")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_wme0s")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_7h0ho")
hframes = 5
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_nmk2x")
}
autoplay = "idle_right"
speed_scale = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_m5o4b")

[node name="chase_detection" type="Area2D" parent="."]
position = Vector2(0, 5)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="chase_detection"]
shape = SubResource("CircleShape2D_eelx2")

[node name="attack_detection" type="Area2D" parent="."]
position = Vector2(0, 5)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_detection"]
shape = SubResource("CircleShape2D_vg3ti")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Sprite2D")
tree_root = SubResource("AnimationNodeStateMachine_6xlp7")
anim_player = NodePath("../Sprite2D/AnimationPlayer")
parameters/conditions/IsDying = false
parameters/conditions/IsMoving = false
parameters/conditions/IsNotMoving = false
parameters/conditions/JustHit = false
parameters/Hit/blend_position = 0.000671148
parameters/Idle/blend_position = -0.00285244
parameters/Move/blend_position = 0.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Projectiles" type="Node2D" parent="."]

[node name="Rotater" type="Node2D" parent="."]
position = Vector2(0, 5)

[connection signal="body_entered" from="chase_detection" to="." method="_on_chase_detection_body_entered"]
[connection signal="body_exited" from="chase_detection" to="." method="_on_chase_detection_body_exited"]
[connection signal="body_entered" from="attack_detection" to="." method="_on_attack_detection_body_entered"]
[connection signal="body_exited" from="attack_detection" to="." method="_on_attack_detection_body_exited"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
